Dashboard, Atividades, Calendário de atividades

--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -218,7 +218,7 @@
             >
               <div style="background-color: #606a85">
                 <li class="nav-item">
-                  <a href="./index.html" class="nav-link">
+                  <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Dashboard
@@ -230,7 +230,25 @@
               <br />
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="/pages/calendar.html" class="nav-link">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
+                    class="nav-link"
+                  >
+                    <i class="nav-icon far fa-calendar-alt"></i>
+                    <p style="padding-top: 10px; padding-bottom: 10px">
+                      Atividades
+                      <!-- <span class="right badge badge-danger">New</span> -->
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <br />
+              <div style="background-color: #8f9dc3">
+                <li class="nav-item">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon far fa-calendar-alt"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Calendário de atividades
@@ -243,9 +261,21 @@
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
                   <a href="#" class="nav-link">
+                    <i class="nav-icon far fa-calendar-alt"></i>
+                    <p style="padding-top: 10px; padding-bottom: 10px">
+                      Materiais de referência
+                      <!-- <span class="right badge badge-danger">New</span> -->
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <br />
+              <div style="background-color: #8f9dc3">
+                <li class="nav-item">
+                  <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-edit"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
-                      Histórico de sugestões
+                      Histórico de atividades
                       <!-- <span class="right badge badge-danger">New</span> -->
                     </p>
                   </a>
@@ -257,19 +287,7 @@
                   <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-check-double"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
-                      Avaliações
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a href="#" class="nav-link">
-                    <i class="nav-icon fas fa-house-user"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      C.M. Guimarães
+                      Perfil
                       <!-- <span class="right badge badge-danger">New</span> -->
                     </p>
                   </a>
@@ -1068,7 +1086,7 @@
                   ></span>
 
                   <div class="info-box-content">
-                    <span class="info-box-text">Menções</span>
+                    <span class="info-box-text">Partilhas</span>
                     <span class="info-box-number">492</span>
 
                     <div class="progress">
@@ -1112,7 +1130,7 @@
                   ></span>
 
                   <div class="info-box-content">
-                    <span class="info-box-text">Atividades</span>
+                    <span class="info-box-text">Utilizadores ativos</span>
                     <span class="info-box-number">5,291</span>
 
                     <div class="progress">
@@ -1134,7 +1152,7 @@
                   ></span>
 
                   <div class="info-box-content">
-                    <span class="info-box-text">Comentários</span>
+                    <span class="info-box-text">Sugestões</span>
                     <span class="info-box-number">1,715</span>
 
                     <div class="progress">
@@ -1363,8 +1381,7 @@
                       <h3 class="timeline-header">
                         <a href="#">Mr. Doe</a> shared a video
                       </h3>
-
-                      <div class="timeline-body">
+                      <!-- <div class="timeline-body">
                         <div class="embed-responsive embed-responsive-16by9">
                           <iframe
                             class="embed-responsive-item"
@@ -1372,7 +1389,8 @@
                             allowfullscreen
                           ></iframe>
                         </div>
-                      </div>
+                      </div> -->
+
                       <div class="timeline-footer">
                         <a href="#" class="btn btn-sm bg-maroon"
                           >See comments</a
