--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -9,7 +9,10 @@
 
     <!-- Favicons -->
     <!--<link href="img/favicon.png" rel="icon" />-->
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link
+      href="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/apple-touch-icon.png"
+      rel="apple-touch-icon"
+    />
 
     <!-- Google Fonts -->
     <link
@@ -99,7 +102,9 @@
           <div class="carousel-inner" role="listbox">
             <div
               class="carousel-item active"
-              style="background-image: url('img/intro-carousel/20.jpg')"
+              style="
+                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/20.jpg');
+              "
             >
               <div class="carousel-container">
                 <div class="carousel-content" style>
@@ -111,7 +116,9 @@
 
             <div
               class="carousel-item"
-              style="background-image: url('img/intro-carousel/16.jpg')"
+              style="
+                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/16.jpg');
+              "
             >
               <div class="carousel-container">
                 <div class="carousel-content">
@@ -132,7 +139,9 @@
 
             <div
               class="carousel-item"
-              style="background-image: url('img/intro-carousel/17.jpg')"
+              style="
+                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/17.jpg');
+              "
             >
               <div class="carousel-container">
                 <div class="carousel-content">
@@ -153,7 +162,9 @@
 
             <div
               class="carousel-item"
-              style="background-image: url('img/intro-carousel/4.jpg')"
+              style="
+                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/4.jpg');
+              "
             >
               <div class="carousel-container">
                 <div class="carousel-content">
@@ -247,7 +258,11 @@
             <div class="col-md-4 wow fadeInUp">
               <div class="about-col">
                 <div class="img">
-                  <img src="img/about-mission.jpg" alt="" class="img-fluid" />
+                  <img
+                    src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/about-mission.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
                   <div class="icon">
                     <i class="ion-ios-speedometer-outline"></i>
                   </div>
@@ -260,7 +275,11 @@
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
               <div class="about-col">
                 <div class="img">
-                  <img src="img/about-plan.jpg" alt="" class="img-fluid" />
+                  <img
+                    src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/about-plan.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
                   <div class="icon"><i class="ion-ios-list-outline"></i></div>
                 </div>
                 <h2 class="title"><a href="#">Experienciar</a></h2>
@@ -271,7 +290,11 @@
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
               <div class="about-col">
                 <div class="img">
-                  <img src="img/about-vision.jpg" alt="" class="img-fluid" />
+                  <img
+                    src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/about-vision.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
                   <div class="icon"><i class="ion-ios-eye-outline"></i></div>
                 </div>
                 <h2 class="title"><a href="#">Avaliar</a></h2>
@@ -326,7 +349,7 @@
           <div class="owl-carousel testimonials-carousel">
             <div class="testimonial-item">
               <img
-                src="img/clients/image 8.png"
+                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 8.png"
                 class="testimonial-img"
                 alt=""
               />
@@ -342,7 +365,7 @@
 
             <div class="testimonial-item">
               <img
-                src="/img/clients/image 36.png"
+                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 36.png"
                 class="testimonial-img"
                 alt=""
               />
@@ -357,7 +380,7 @@
 
             <div class="testimonial-item">
               <img
-                src="/img/clients/image 37.png"
+                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 37.png"
                 class="testimonial-img"
                 alt=""
               />
@@ -372,7 +395,7 @@
 
             <div class="testimonial-item">
               <img
-                src="/img/clients/image 38.png"
+                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 38.png"
                 class="testimonial-img"
                 alt=""
               />
@@ -389,7 +412,7 @@
 
             <div class="testimonial-item">
               <img
-                src="/img/clients/image 39.png"
+                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 39.png"
                 class="testimonial-img"
                 alt=""
               />
@@ -406,7 +429,7 @@
 
       <section id="call-to-action" class="wow fadeIn" style="height: 400px">
         <img
-          src="/img/clients/Cidade_Amiga.png"
+          src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/Cidade_Amiga.png"
           alt="CidadeAmiga"
           style="
             width: 25%;
