--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -216,6 +216,7 @@
               role="menu"
               data-accordion="false"
             >
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #606a85">
                 <li class="nav-item">
                   <a href="#" class="nav-link">
@@ -228,6 +229,7 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção só aparece para as camaras -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
                   <a
@@ -243,6 +245,7 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção só aparece para as instituições -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
                   <a
@@ -258,6 +261,23 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção só aparece para as camaras -->
+              <div style="background-color: #8f9dc3">
+                <li class="nav-item">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
+                    class="nav-link"
+                  >
+                    <i class="nav-icon far fa-calendar-alt"></i>
+                    <p style="padding-top: 10px; padding-bottom: 10px">
+                      Calendário de atividades
+                      <!-- <span class="right badge badge-danger">New</span> -->
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <br />
+              <!-- esta opção só aparece para as camaras -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
                   <a href="#" class="nav-link">
@@ -270,9 +290,13 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/examples/contacts.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon fas fa-edit"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Histórico de atividades
@@ -282,9 +306,45 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção só aparece para as instituições -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
+                    class="nav-link"
+                  >
+                    <i class="nav-icon fas fa-handshake"></i>
+                    <p style="padding-top: 10px; padding-bottom: 10px">
+                      Parceiros
+                      <!-- <span class="right badge badge-danger">New</span> -->
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <br />
+              <!-- esta opção só aparece para as instituições -->
+              <div style="background-color: #8f9dc3">
+                <li class="nav-item">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
+                    class="nav-link"
+                  >
+                    <i class="nav-icon fas fa-comment-dots"></i>
+                    <p style="padding-top: 10px; padding-bottom: 10px">
+                      Sugestões
+                      <!-- <span class="right badge badge-danger">New</span> -->
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <br />
+              <!-- esta opção aparece sempre -->
+              <div style="background-color: #8f9dc3">
+                <li class="nav-item">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/examples/profile.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon fas fa-check-double"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Perfil
@@ -294,9 +354,13 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon fas fa-house-user"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Logout
@@ -1293,7 +1357,7 @@
                         ><i class="fas fa-clock"></i> 12:05</span
                       >
                       <h3 class="timeline-header">
-                        <a href="#">Support Team</a> sent you an email
+                        <a href="#">Equipa ProChild</a> enviou-lhe um email
                       </h3>
 
                       <div class="timeline-body">
@@ -1304,8 +1368,55 @@
                         weebly balihoo...
                       </div>
                       <div class="timeline-footer">
-                        <a class="btn btn-primary btn-sm">Read more</a>
-                        <a class="btn btn-danger btn-sm">Delete</a>
+                        <a class="btn btn-primary btn-sm">Avaliar atividade</a>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- END timeline item -->
+                  <!-- timeline item -->
+                  <div>
+                    <i class="fas fa-envelope bg-blue"></i>
+                    <div class="timeline-item">
+                      <span class="time"
+                        ><i class="fas fa-clock"></i> 12:13</span
+                      >
+                      <h3 class="timeline-header">
+                        <a href="#">Equipa ProChild</a> enviou-lhe um email
+                      </h3>
+
+                      <div class="timeline-body">
+                        Etsy doostang zoodles disqus groupon greplin oooj voxy
+                        zoodles, weebly ning heekya handango imeem plugg dopplr
+                        jibjab, movity jajah plickers sifteo edmodo ifttt
+                        zimbra. Babblely odeo kaboodle quora plaxo ideeli hulu
+                        weebly balihoo...
+                      </div>
+                      <div class="timeline-footer">
+                        <a class="btn btn-primary btn-sm">Avaliar o impacto</a>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- END timeline item -->
+                  <!-- timeline item -->
+                  <div>
+                    <i class="fas fa-envelope bg-blue"></i>
+                    <div class="timeline-item">
+                      <span class="time"
+                        ><i class="fas fa-clock"></i> 13:20</span
+                      >
+                      <h3 class="timeline-header">
+                        <a href="#">Equipa ProChild</a> enviou-lhe um email
+                      </h3>
+
+                      <div class="timeline-body">
+                        Etsy doostang zoodles disqus groupon greplin oooj voxy
+                        zoodles, weebly ning heekya handango imeem plugg dopplr
+                        jibjab, movity jajah plickers sifteo edmodo ifttt
+                        zimbra. Babblely odeo kaboodle quora plaxo ideeli hulu
+                        weebly balihoo...
+                      </div>
+                      <div class="timeline-footer">
+                        <a class="btn btn-primary btn-sm">Avaliação</a>
                       </div>
                     </div>
                   </div>
@@ -1331,15 +1442,19 @@
                         ><i class="fas fa-clock"></i> 27 mins ago</span
                       >
                       <h3 class="timeline-header">
-                        <a href="#">Jay White</a> commented on your post
+                        <a href="#">António Pimentel</a> enviou-lhe uma
+                        candidatura a parceiro.
                       </h3>
                       <div class="timeline-body">
-                        Take me to your leader! Switzerland is small and
-                        neutral! We are more like Germany, ambitious and
-                        misunderstood!
+                        Acaba de receber uma nova candidatura para uma parceria
+                        de uma das suas atividades.
                       </div>
                       <div class="timeline-footer">
-                        <a class="btn btn-warning btn-sm">View comment</a>
+                        <a
+                          href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
+                          class="btn btn-warning btn-sm"
+                          >Ver mais</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -1357,9 +1472,13 @@
                         ><i class="fas fa-clock"></i> 2 days ago</span
                       >
                       <h3 class="timeline-header">
-                        <a href="#">Mina Lee</a> uploaded new photos
+                        <a href="#">Support</a> carregou novas fotos para uma
+                        atividade.
                       </h3>
                       <div class="timeline-body">
+                        Acabou de adicionar à galeria da atividade as seguintes
+                        fotos:
+                        <br />
                         <img src="https://placehold.it/150x100" alt="..." />
                         <img src="https://placehold.it/150x100" alt="..." />
                         <img src="https://placehold.it/150x100" alt="..." />
