--- a/Frontend/Backoffice/Adaptado/pages/tables/data.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/data.html
@@ -204,6 +204,7 @@
               role="menu"
               data-accordion="false"
             >
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
                   <a
@@ -219,6 +220,7 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção só aparece para as camaras -->
               <div style="background-color: #606a85">
                 <li class="nav-item">
                   <a href="#" class="nav-link">
@@ -231,10 +233,11 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção só aparece para as camaras -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
                   <a
-                    href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
+                    href="/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html"
                     class="nav-link"
                   >
                     <i class="nav-icon far fa-calendar-alt"></i>
@@ -246,6 +249,7 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção só aparece para as camaras -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
                   <a href="#" class="nav-link">
@@ -258,9 +262,13 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/examples/contacts.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon fas fa-edit"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Histórico de atividades
@@ -270,9 +278,13 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/examples/profile.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon fas fa-check-double"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Perfil
@@ -282,9 +294,13 @@
                 </li>
               </div>
               <br />
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon fas fa-house-user"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Logout
