--- a/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar_camaras.html
@@ -209,13 +209,42 @@
                 </li>
               </div>
               <br />
-              <!-- esta opção só aparece para as instituições -->
+              <!-- esta opção só aparece para as camaras -->
+              <div style="background-color: #8f9dc3">
+                <li class="nav-item">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
+                    class="nav-link"
+                  >
+                    <i class="nav-icon far fa-calendar-alt"></i>
+                    <p style="padding-top: 10px; padding-bottom: 10px">
+                      Atividades
+                      <!-- <span class="right badge badge-danger">New</span> -->
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <br />
+              <!-- esta opção aparece sempre -->
               <div style="background-color: #606a85">
                 <li class="nav-item">
                   <a href="#" class="nav-link">
                     <i class="nav-icon far fa-calendar-alt"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Calendário de atividades
+                      <!-- <span class="right badge badge-danger">New</span> -->
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <br />
+              <!-- esta opção só aparece para as camaras -->
+              <div style="background-color: #8f9dc3">
+                <li class="nav-item">
+                  <a href="#" class="nav-link">
+                    <i class="nav-icon far fa-calendar-alt"></i>
+                    <p style="padding-top: 10px; padding-bottom: 10px">
+                      Materiais de referência
                       <!-- <span class="right badge badge-danger">New</span> -->
                     </p>
                   </a>
@@ -232,38 +261,6 @@
                     <i class="nav-icon fas fa-edit"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Histórico de atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
-              <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-handshake"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Parceiros
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <br />
-              <!-- esta opção só aparece para as instituições -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/sugestoes.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon fas fa-comment-dots"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Sugestões
                       <!-- <span class="right badge badge-danger">New</span> -->
                     </p>
                   </a>
@@ -983,28 +980,28 @@
                         <div
                           class="external-event bg-success"
                           data-toggle="modal"
-                          data-target="#MaisInfo2"
+                          data-target="#MaisInfo"
                         >
                           Lunch
                         </div>
                         <div
                           class="external-event bg-warning"
                           data-toggle="modal"
-                          data-target="#MaisInfo2"
+                          data-target="#MaisInfo"
                         >
                           Go home
                         </div>
                         <div
                           class="external-event bg-info"
                           data-toggle="modal"
-                          data-target="#MaisInfo2"
+                          data-target="#MaisInfo"
                         >
                           Do homework
                         </div>
                         <div
                           class="external-event bg-primary"
                           data-toggle="modal"
-                          data-target="#MaisInfo2"
+                          data-target="#MaisInfo"
                         >
                           Work on UI design
                         </div>
@@ -1015,110 +1012,11 @@
                         >
                           Sleep tight
                         </div>
-                        <div class="checkbox">
-                          <label for="drop-remove">
-                            <input type="checkbox" id="drop-remove" />
-                            Remover depois de inserido
-                          </label>
-                        </div>
                       </div>
                     </div>
                     <!-- /.card-body -->
                   </div>
                   <!-- /.card -->
-                  <div class="card">
-                    <div class="card-header">
-                      <h3 class="card-title">Criar uma atividade</h3>
-                    </div>
-                    <div class="card-body">
-                      <div
-                        class="btn-group"
-                        style="width: 100%; margin-bottom: 10px"
-                      >
-                        <ul class="fc-color-picker" id="color-chooser">
-                          <li>
-                            <a class="text-primary" href="#"
-                              ><i class="fas fa-square"></i
-                            ></a>
-                          </li>
-                          <li>
-                            <a class="text-warning" href="#"
-                              ><i class="fas fa-square"></i
-                            ></a>
-                          </li>
-                          <li>
-                            <a class="text-success" href="#"
-                              ><i class="fas fa-square"></i
-                            ></a>
-                          </li>
-                          <li>
-                            <a class="text-danger" href="#"
-                              ><i class="fas fa-square"></i
-                            ></a>
-                          </li>
-                          <li>
-                            <a class="text-muted" href="#"
-                              ><i class="fas fa-square"></i
-                            ></a>
-                          </li>
-                        </ul>
-                      </div>
-                      <!-- /btn-group -->
-                      <div class="input-group">
-                        <input
-                          id="new-event"
-                          type="text"
-                          class="form-control"
-                          placeholder="Nome da atividade"
-                          required
-                        />
-
-                        <div class="input-group-append">
-                          <button
-                            id="add-new-event"
-                            type="button"
-                            class="btn btn-primary"
-                          >
-                            Criar
-                          </button>
-                        </div>
-                        <!-- /btn-group -->
-                      </div>
-                      <br />
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Local"
-                      />
-                      <br />
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Descrição"
-                      />
-                      <br />
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Parceiros"
-                      />
-                      <br />
-                      <div class="custom-file">
-                        <input
-                          type="file"
-                          class="custom-file-input"
-                          id="customFile"
-                        />
-                        <label
-                          class="custom-file-label"
-                          style="color: rgb(147, 155, 162)"
-                          for="customFile"
-                          >Adicionar imagem</label
-                        >
-                      </div>
-                      <!-- /input-group -->
-                    </div>
-                  </div>
                 </div>
               </div>
               <!-- /.col -->
@@ -1142,7 +1040,7 @@
       </div>
       <!-- /.content-wrapper -->
 
-      <div class="modal fade" id="MaisInfo2">
+      <div class="modal fade" id="MaisInfo">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -1376,7 +1274,7 @@
               borderColor: "#3c8dbc", //Primary (light-blue)
             },
           ],
-          editable: true,
+          editable: false,
           locale: "pt",
           droppable: true, // this allows things to be dropped onto the calendar !!!
           drop: function (info) {
@@ -1421,7 +1319,6 @@
               color: "#fff",
             })
             .addClass("external-event");
-
           event.text(val);
           $("#external-events").prepend(event);
 
