Materiais de referencia

--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -280,7 +280,10 @@
               <!-- esta opção só aparece para as camaras -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon far fa-calendar-alt"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Materiais de referência
@@ -1087,7 +1090,11 @@
                   <div class="icon">
                     <i class="fas fa-democrat"></i>
                   </div>
-                  <a href="#" class="small-box-footer"
+                  <!-- se for instituição vai para ../pages/calendar -->
+                  <!-- se for camara vai para ../pages/calendar_camaras -->
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
+                    class="small-box-footer"
                     >Ver mais <i class="fas fa-arrow-circle-right"></i
                   ></a>
                 </div>
@@ -1104,7 +1111,11 @@
                   <div class="icon">
                     <i class="ion ion-stats-bars"></i>
                   </div>
-                  <a href="#" class="small-box-footer"
+                  <!-- se for instituição vai para ../pages/calendar -->
+                  <!-- se for camara vai para ../pages/calendar_camaras -->
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/calendar.html"
+                    class="small-box-footer"
                     >Ver mais <i class="fas fa-arrow-circle-right"></i
                   ></a>
                 </div>
@@ -1121,7 +1132,9 @@
                   <div class="icon">
                     <i class="fas fa-calendar-check"></i>
                   </div>
-                  <a href="#" class="small-box-footer"
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/examples/contacts.html"
+                    class="small-box-footer"
                     >Ver mais <i class="fas fa-arrow-circle-right"></i
                   ></a>
                 </div>
