--- a/Frontend/Backoffice/Adaptado/pages/tables/data.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/data.html
@@ -252,7 +252,10 @@
               <!-- esta opção só aparece para as camaras -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/Backoffice/Adaptado/pages/tables/materialReferencia.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon far fa-calendar-alt"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Materiais de referência
